adjusted background image and jumbotron.working on navbar collapse issue.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,14 +1,10 @@
 body {
   background-image: url("../src/images/stackedBooks.jpg");
+  background-repeat: no-repeat;
   background-attachment: fixed;
-  background-repeat: no-repeat; 
   background-position: right;
-}
-
-@media screen and (max-width: 768px){
-  body {
-    background-size: 100%;
-  }
+  background-size: 50%;
+  
 }
 
 
