--- a/client/src/components/componentStyle.css
+++ b/client/src/components/componentStyle.css
@@ -11,7 +11,7 @@ ul {
 
 .jumbotron {
     font-family: 'Libre Baskerville', serif;
-    width: 68.5%
+    width:50%;
 }
 
 .navbar {
@@ -23,26 +23,3 @@ ul {
 }
 
 /* media queries */
-@media screen and (max-width:980px){
-    .jumbotron {
-        font-size: 30px;
-        width: 49%;
-    }
-
-}
-
-@media screen and (max-width: 768px){
-    .jumbotron {
-       width: 100%;
-    }
-}
-
-/* rec'd screen size from http://stephen.io/mediaqueries/#iPhone */
-@media only screen 
-and (min-device-width : 375px) 
-and (max-device-width : 667px) {
-     .navbar, .jumbotron{
-         width: 500px;
-     }
-     
-}
